# CPax

./: .bumpversion.toml  .flake8  .gitignore  .readthedocs.yaml  README.md  bumpversion.toml  environment.yaml  pyproject.toml
.github/workflows/: dispatch.yaml  lint.yaml  manual-release.yaml  ode.yaml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
examples/: nbody_gravity.py
src/cpax/: __init__.py
src/cpax/ode/: __init__.py  integrators.py  models.py
tests/: test_integrators.py  test_ode.py
