[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CPax"
version = "v2025.3.0"
description = "CPax: A JAX-based computational physics library."
authors = [
  { name = "Jan Lukas Späh", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["physics", "computational", "jax", "autograd", "ODE", "PDE"]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License"
]

dependencies = [
  "jax>=0.4.0",
  "jaxlib>=0.4.0",
  "numpy>=1.24,<2.0",
  "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
  "flake8",
  "pytest",
]
test = [
  "pytest",
]

[project.urls]
"Source" = "https://github.com/JaLuka98/CPax"
"Tracker" = "https://github.com/JaLuka98/CPax/issues"
